[gd_scene format=3 uid="uid://c5loygndyj24s"]

[ext_resource type="Shader" uid="uid://40mbcerxd6h5" path="res://title_screen/auto_scroll.gdshader" id="1_dxpbd"]
[ext_resource type="Script" uid="uid://ceitvkgp0ma4a" path="res://title_screen/title_screen.gd" id="1_vbjqi"]
[ext_resource type="Texture2D" uid="uid://f1s2hmrjuh8p" path="res://title_screen/mist_background.png" id="3_0m3ch"]
[ext_resource type="Theme" uid="uid://cxudk72k3ty4u" path="res://title_screen/title_screen_theme.tres" id="3_2dq6q"]
[ext_resource type="Texture2D" uid="uid://c5jrstt6116e5" path="res://title_screen/title-background_2.png" id="3_fk0fn"]
[ext_resource type="PackedScene" uid="uid://dfsijg414m7lv" path="res://hud/screen_fade/screen_fade.tscn" id="5_0m3ch"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fk0fn"]
resource_local_to_scene = true
shader = ExtResource("1_dxpbd")
shader_parameter/shader_time = 0.0
shader_parameter/x_scroll = 2.0
shader_parameter/y_scroll = -1.5

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2dq6q"]
resource_local_to_scene = true
shader = ExtResource("1_dxpbd")
shader_parameter/shader_time = 0.0
shader_parameter/x_scroll = 4.0
shader_parameter/y_scroll = 2.0

[node name="TitleScreen" type="Control" unique_id=469547672]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1280.0
offset_bottom = -720.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vbjqi")

[node name="PineBackground" type="TextureRect" parent="." unique_id=1053854138]
texture_repeat = 2
material = SubResource("ShaderMaterial_fk0fn")
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_fk0fn")

[node name="MistBackground" type="TextureRect" parent="." unique_id=1360786259]
texture_repeat = 2
material = SubResource("ShaderMaterial_2dq6q")
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_0m3ch")

[node name="Label" type="Label" parent="." unique_id=1686995482]
layout_mode = 0
offset_left = 251.0
offset_top = 167.0
offset_right = 1075.0
offset_bottom = 320.0
theme = ExtResource("3_2dq6q")
text = "The Blue Wolf"

[node name="Play" type="Button" parent="." unique_id=462307363]
layout_mode = 0
offset_left = 464.0
offset_top = 440.0
offset_right = 838.0
offset_bottom = 539.0
mouse_default_cursor_shape = 2
theme = ExtResource("3_2dq6q")
keep_pressed_outside = true
text = "Begin the Hunt"

[node name="ScreenFade" parent="." unique_id=1987752587 instance=ExtResource("5_0m3ch")]
layout_mode = 0

[node name="MusicDelay" type="Timer" parent="." unique_id=1350134245]
one_shot = true

[node name="DebugTouchControls" type="Button" parent="." unique_id=1772611305]
visible = false
layout_mode = 0
offset_left = 27.0
offset_top = 29.0
offset_right = 294.0
offset_bottom = 112.0
text = "Debug Touch Controls"

[connection signal="gui_input" from="Play" to="." method="_on_play_gui_input"]
[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="fade_in_complete" from="ScreenFade" to="." method="_on_screen_fade_fade_in_complete"]
[connection signal="fade_out_complete" from="ScreenFade" to="." method="_on_screen_fade_out_complete"]
[connection signal="timeout" from="MusicDelay" to="." method="_on_music_delay_timeout"]
